внесены правки в код

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   <body>
     
     <header class="header-page">
-       <div class="container header__container">
+       <div class="container header-page__container">
          
           <div class="header-page__mobile">
              <a class="logo-name" href="./index.html" lang="en">
